--- a/styles/components/components.css
+++ b/styles/components/components.css
@@ -1,4 +1,4 @@
 @import url('./fixVersion.css');
 @import url('./shared.css');
 @import url('./dropdown.css');
-@import url('./applications.css');
+@import url('./relTickets.css');
